@@ -2,15 +2,21 @@ package application.constants;
 
 import application.enums.ExceptionCodes;
 
+import java.util.Collections;
 import java.util.Map;
 
 public final class AppConstants {
 
+    //todo refactor - move to enum, why is this here awnyway?
     public static Map<ExceptionCodes, String> exceptionCodes =
-            Map.of(ExceptionCodes.CLASS_LOAD_RESOURCE_LOAD_XCPT,
-                    "Class loader resource load",
-                    ExceptionCodes.JVM_GENERIC_IO_XCPT,
-                    "Generic IOException");
+            Collections.unmodifiableMap(
+                    Map.of(ExceptionCodes.CLASS_LOAD_RESOURCE_LOAD_XCPT,
+                            "Class loader resource load",
+                            ExceptionCodes.JVM_GENERIC_IO_XCPT,
+                            "Generic IOException",
+                            ExceptionCodes.JVM_IMAGE_CONVERSION_XCPT,
+                            "Image conversion exception")
+            );
 
     public static class UIConstants {
         public static class Window {
